--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -12,6 +12,8 @@
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <Deterministic>true</Deterministic>
+        <Nullable>enable</Nullable>
+        <LangVersion>8</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,6 +35,9 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="DotnetNoise, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\DotnetNoise.1.0.0\lib\netstandard2.0\DotnetNoise.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Xml.Linq" />
@@ -47,18 +52,21 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Assets\Images\Images.cs" />
+        <Compile Include="Controller\BoosterSpawner.cs" />
+        <Compile Include="Controller\CollisionController.cs" />
+        <Compile Include="Controller\EnemyAI.cs" />
         <Compile Include="Controller\EnemySpawner.cs" />
+        <Compile Include="Controller\Side.cs" />
         <Compile Include="GameSettings.cs" />
-        <Compile Include="Model\Entity\Booster.cs" />
-        <Compile Include="Model\Entity\BoosterData.cs" />
-        <Compile Include="Model\Entity\BoosterType.cs" />
-        <Compile Include="Model\Entity\Enemy.cs" />
-        <Compile Include="Model\Entity\Entity.cs" />
-        <Compile Include="Model\Entity\Player.cs" />
+        <Compile Include="Model\EntityModel\Booster.cs" />
+        <Compile Include="Model\EntityModel\BoosterData.cs" />
+        <Compile Include="Model\EntityModel\BoosterType.cs" />
+        <Compile Include="Model\EntityModel\Enemy.cs" />
+        <Compile Include="Model\EntityModel\Entity.cs" />
+        <Compile Include="Model\EntityModel\Player.cs" />
         <Compile Include="Model\GameModel.cs" />
         <Compile Include="Model\GameState.cs" />
         <Compile Include="Model\LandType.cs" />
-        <Compile Include="Model\Map.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="View\Screen\BaseScreen.cs" />
@@ -75,6 +83,7 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <None Include="packages.config" />
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
