--- a/Game.csproj
+++ b/Game.csproj
@@ -56,6 +56,7 @@
         <Compile Include="Controller\CollisionController.cs" />
         <Compile Include="Controller\EnemyAI.cs" />
         <Compile Include="Controller\EnemySpawner.cs" />
+        <Compile Include="Controller\GameTickController.cs" />
         <Compile Include="Controller\Side.cs" />
         <Compile Include="GameSettings.cs" />
         <Compile Include="Model\EntityModel\Booster.cs" />
